--- a/.gitignore
+++ b/.gitignore
@@ -244,4 +244,6 @@ datasets/*.csv
 datasets/data_from_tumblr/*.csv
 datasets/glove/
 notebooks/.vector_cache
-results/
+results/2024-04-21-lstm/
+results/lstm/
+results/models/
